CAMEL-4044. Port to 2.7.x
git-svn-id: https://svn.apache.org/repos/asf/camel/branches/camel-2.7.x@1134510 13f79535-47bb-0310-9956-ffa450edef68